zellij-server/src/panes/tiled_panes/unit/snapshots/zellij_server__panes__tiled_panes__stacked_panes__stacked_panes_tests__break_pane_out_of_stack.snap
---
source: zellij-server/src/panes/tiled_panes/./unit/stacked_panes_tests.rs
assertion_line: 156
expression: "format!(\"{:#?}\", pane_geoms_after)"
---
[
    PaneGeom {
        x: 0,
        y: 0,
        rows: Dimension {
            constraint: Percent(
                33.3,
            ),
            inner: 33,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        is_stacked: false,
        is_pinned: false,
        logical_position: Some(
            1,
        ),
    },
    PaneGeom {
        x: 0,
        y: 33,
        rows: Dimension {
            constraint: Percent(
                33.3,
            ),
            inner: 33,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        is_stacked: false,
        is_pinned: false,
        logical_position: Some(
            2,
        ),
    },
    PaneGeom {
        x: 0,
        y: 66,
        rows: Dimension {
            constraint: Percent(
                11.1,
            ),
            inner: 11,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        is_stacked: false,
        is_pinned: false,
        logical_position: Some(
            3,
        ),
    },
    PaneGeom {
        x: 0,
        y: 77,
        rows: Dimension {
            constraint: Percent(
                22.199999999999996,
            ),
            inner: 22,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        is_stacked: true,
        is_pinned: false,
        logical_position: Some(
            4,
        ),
    },
    PaneGeom {
        x: 0,
        y: 99,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        is_stacked: true,
        is_pinned: false,
        logical_position: Some(
            5,
        ),
    },
]
