zellij-server/src/panes/tiled_panes/unit/snapshots/zellij_server__panes__tiled_panes__stacked_panes__stacked_panes_tests__combine_horizontally_aligned_panes_to_stack.snap
---
source: zellij-server/src/panes/tiled_panes/./unit/stacked_panes_tests.rs
expression: "format!(\"{:#?}\", pane_geoms_after)"
---
[
    PaneGeom {
        x: 0,
        y: 0,
        rows: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 98,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 100,
        },
        stacked: Some(
            StackInfo {
                id: 0,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            1,
        ),
    },
    PaneGeom {
        x: 0,
        y: 98,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 100,
        },
        stacked: Some(
            StackInfo {
                id: 0,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            2,
        ),
    },
    PaneGeom {
        x: 0,
        y: 99,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 100,
        },
        stacked: Some(
            StackInfo {
                id: 0,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            3,
        ),
    },
]
