zellij-server/src/panes/tiled_panes/unit/snapshots/zellij_server__panes__tiled_panes__stacked_panes__stacked_panes_tests__combine_vertically_aligned_panes_to_stack_when_both_are_stacked.snap
---
source: zellij-server/src/panes/tiled_panes/./unit/stacked_panes_tests.rs
expression: "format!(\"{:#?}\", pane_geoms_after)"
---
[
    PaneGeom {
        x: 0,
        y: 0,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            StackInfo {
                id: 2,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            1,
        ),
    },
    PaneGeom {
        x: 0,
        y: 1,
        rows: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 96,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            StackInfo {
                id: 2,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            2,
        ),
    },
    PaneGeom {
        x: 0,
        y: 97,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            StackInfo {
                id: 2,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            3,
        ),
    },
    PaneGeom {
        x: 0,
        y: 98,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            StackInfo {
                id: 2,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            4,
        ),
    },
    PaneGeom {
        x: 0,
        y: 99,
        rows: Dimension {
            constraint: Fixed(
                1,
            ),
            inner: 1,
        },
        cols: Dimension {
            constraint: Percent(
                100.0,
            ),
            inner: 1,
        },
        stacked: Some(
            StackInfo {
                id: 2,
                geom: None,
            },
        ),
        is_pinned: false,
        logical_position: Some(
            5,
        ),
    },
]
